# label_scanner

./: README.md  api.py  requirements.txt
label_scanner/: MANIFEST.in  pyproject.toml  requirements.txt  setup.py
label_scanner/doctype/label_scan_settings/: label_scan_settings.js  label_scan_settings.json  label_scan_settings.py
label_scanner/label_scanner/: hooks.py  modules.txt
label_scanner/label_scanner/config/: desktop.py  docs.py
label_scanner/public/css/: label_scanner.css
label_scanner/public/js/: label_scanner.js
